[gd_scene load_steps=7 format=3 uid="uid://bmsl7amppjk2g"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_f8nuk"]
[ext_resource type="Texture2D" uid="uid://jodgpoi1k41l" path="res://sprites/space-invaders-enemy.png" id="1_jhfax"]
[ext_resource type="AudioStream" uid="uid://l417hyn8x0gm" path="res://sfx/Explosion.wav" id="3_ics47"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8m87c"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80oja"]
size = Vector2(16, 16)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4v7dd"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 15.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 3.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
process_mode = 1
position = Vector2(80, 16)
collision_layer = 8
collision_mask = 0
script = ExtResource("1_f8nuk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8m87c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jhfax")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_80oja")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Sfx" type="Node2D" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("3_ics47")

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_4v7dd")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
